--- a/fnf-2n-try/export_presets.cfg
+++ b/fnf-2n-try/export_presets.cfg
@@ -19,13 +19,10 @@ display/height="720"
 display/resizable=false
 
 graphics/opengl_3=true
-
-android/package/unique_name=true
-android/version/min_sdk="21"
-android/version/target_sdk="34"
-android/architecture/arm64=true
-android/architecture/arm32=true
-android/architecture/x86_64=false
-android/architecture/x86=false
+package/unique_name=true
+version/min_sdk="21"
+version/target_sdk="34"
+architecture/arm64=true
+architecture/arm32=true
 
 xr_features/xr_mode="default"
