--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Godot
-        uses: firebelley/godot-export@v5.3.0
+      - uses: firebelley/godot-export@v5.0.0
         with:
           godot_version: '4.2.1-stable'
 
