--- a/fnf-2n-try/export_presets.cfg
+++ b/fnf-2n-try/export_presets.cfg
@@ -1,16 +1,16 @@
 [preset.0]
-
 name="Android"
 platform="Android"
 runnable=true
 export_filter="all_resources"
-export_path="game.apk"
+include_filter=""
+exclude_filter=""
+export_path="MusicalSniffle.apk"
 
 [preset.0.options]
-
 application/config/name="Musical Sniffle"
 application/config/version="1.0"
-application/config/version_code="1"
+application/version_code="1"
 application/config/package="com.eltron111.musicalsniffle"
 
 display/orientation="landscape"
@@ -19,10 +19,17 @@ display/height="720"
 display/resizable=false
 
 graphics/opengl_3=true
-package/unique_name=true
-version/min_sdk="21"
-version/target_sdk="34"
-architecture/arm64=true
-architecture/arm32=true
+
+android/package/unique_name=true
+android/version/min_sdk="21"
+android/version/target_sdk="34"
+android/architecture/arm64=true
+android/architecture/arm32=false
+android/architecture/x86_64=false
+android/architecture/x86=false
+
+keystore/release=""
+keystore/release_user=""
+keystore/release_password=""
 
 xr_features/xr_mode="default"
