--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,11 @@ jobs:
           unzip -q -j ~/godot.zip 'Godot_v4.2.1-stable_linux.x86_64' -d ~/.local/share/godot/
           chmod +x ~/.local/share/godot/Godot_v4.2.1-stable_linux.x86_64
           wget -q -O ~/templates.tpz https://github.com/godotengine/godot/releases/download/4.2.1-stable/Godot_v4.2.1-stable_export_templates.tpz
+          mkdir -p ~/temp_templates
+          unzip -q ~/templates.tpz -d ~/temp_templates/
           mkdir -p ~/.local/share/godot/export_templates/4.2.1.stable/
-          unzip -q ~/templates.tpz -d ~/.local/share/godot/export_templates/4.2.1.stable/
+          cp -r ~/temp_templates/templates/* ~/.local/share/godot/export_templates/4.2.1.stable/
+          ls -la ~/.local/share/godot/export_templates/4.2.1.stable/android_*
 
       - name: Export Android APK
         run: |
