--- a/fnf-2n-try/export_presets.cfg
+++ b/fnf-2n-try/export_presets.cfg
@@ -11,7 +11,8 @@ export_path="MusicalSniffle.apk"
 application/config/name="Musical Sniffle"
 application/config/version="1.0"
 application/version_code="1"
-application/config/package="com.eltron111.musicalsniffle"
+# ⚠️¡LÍNEA CORREGIDA AQUÍ!⚠️
+application/config/package="com.eltron111.musicalsniffle.app"
 
 display/orientation="landscape"
 display/width="1280"
